- add new GTD context tags
  - =@laptop=
  - =@motorbike=
  - =@phone=
  - =@planning=

- agenda view for =Creative [I]maginings=

- automatic spell-checking for =org-mode=

- command for prompting for and inserting (org) links with
  descriptions

- configuration for =checkdoc=

- configuration for =org-re-reveal=

- fill-column for =latex-mode=

- fill-column for =markdown-mode=

*** Installer

- =configure_dev_terminal= recipe

- install configuration for =agda=

- install configuration for =htop=

- install configuration for =ocaml=

- install configuration for =okular=

- install configuration for =perl_local_lib= (=local::lib=)

- install configuration for =slack=

- install configuration for =texlive=

- install configuration for =xrandr=

*** Snippets

**** =latex-mode=

- =begin=
- =lists/itemize=
- =math/align-star=
- =proof=
- =sectioning/paragraph=
- =sectioning/section=
- =sectioning/subparagraph=
- =slide=
- =todo-bmi=
- =unused-lemma=

**** =org-mode=

- =blocks/block-latex=
- =blocks/block-quote=
- =blocks/source-block=
- =blocks/source-block-emacs-lisp=
- =includes/include=
- =includes/include-min-level=
- =properties/basic-property=
- =quote-with-author-and-time=
- =tex/begin-definition-tex=
- =tex/begin-tex=
- =tex/granule=
- =title=
- =todo-comment=

*** Xmobar

- indicator for audio volume and status

- indicator for microphone volume and status

- indicator for network ESSID and quality

- indicator for usage and expected lifetime of battery

*** XMonad

- new keybindings
  - decrease microphone sensitivity
  - increase microphone sensitivity
  - mute microphone

** Changed

- commands for showing/hiding secondary monitor now use more
  generic detection mechanism

- default indent in =haskel-mode= is now 2

- =flyspell= no longer enabled in all text modes in Emacs

- =office-monitor-hide= renamed to =monitor-hide-secondary=

- =office-monitor-show= renamed to =monitor-show-secondary=

- perl modules now install under =~/.local=
